--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <version>17.0.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+
         <!-- JSON support for Firebase -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
