--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -9,10 +8,21 @@
     <artifactId>group-project-2025</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- (Central is default, but keeping this is fine) -->
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- JUnit 5 version -->
+        <junit.jupiter.version>5.11.0</junit.jupiter.version>
     </properties>
 
     <dependencies>
@@ -23,12 +33,14 @@
             <artifactId>javafx-controls</artifactId>
             <version>17.0.6</version>
         </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>17.0.6</version>
         </dependency>
 
+        <!-- org.json -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -42,14 +54,21 @@
             <version>2.10.1</version>
         </dependency>
 
+        <!-- ✅ JUnit 5 for testing -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.11.0</version>
+
+        </dependency>
+
     </dependencies>
 
     <build>
-        <!-- Tell Maven where your .java files are -->
+        <!-- main source code -->
         <sourceDirectory>src/main/java</sourceDirectory>
 
-
-        <!-- Tell Maven where your .fxml files are -->
+        <!-- resources (FXML, images, CSS) -->
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -63,16 +82,32 @@
         </resources>
 
         <plugins>
+            <!-- JavaFX plugin -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <!-- Make sure this matches exactly your class name -->
+                    <!-- Your JavaFX Application class -->
                     <mainClass>com.group.project.Recipe</mainClass>
-
                 </configuration>
             </plugin>
+
+            <!-- ✅ JUnit 5 test runner -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <!-- pick up *Test.java -->
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <!-- helps with JavaFX / modules -->
+                    <useModulePath>false</useModulePath>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
